--- a/index.html
+++ b/index.html
@@ -273,10 +273,9 @@
 <!-- Banner de redes sociales (mueve con la página) -->
 <div class="social-banner">
     <p>¡Síguenos en nuestras redes sociales!</p>
-    <a href="https://facebook.com" target="_blank">Facebook</a>
-    <a href="https://instagram.com" target="_blank">Instagram</a>
-    <a href="https://twitter.com" target="_blank">Twitter</a>
-    <p>Contáctanos al: +52 123 456 7890</p>
+    <a href=https://www.facebook.com/share/16AWrM5C9H/?mibextid=wwXIfr target="_blank">Facebook</a>
+    <a href=https://www.instagram.com/olimpo.sportsmx?igsh=dzcwZ21pZTFnMzM1 target="_blank">Instagram</a>
+    <p>Contáctanos al: wa.me/+52 55 74 43 92 43</p>
 </div>
 
 <script>
