--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                                 <option value="XL">XL</option>
                                 <option value="XXL">XXL</option>
                                 <option value="XXXL">XXXL</option>
+                                <option value="N/A">N/A</option>
                             </select>
                         </td>
                         <td><select name="tallaShort[]">
@@ -164,6 +165,7 @@
                                 <option value="XL">XL</option>
                                 <option value="XXL">XXL</option>
                                 <option value="XXXL">XXXL</option>
+                                <option value="N/A">N/A</option>
                             </select>
                         </td>
                     </tr>
@@ -194,6 +196,7 @@
                                 <option value="XL">XL</option>
                                 <option value="XXL">XXL</option>
                                 <option value="XXXL">XXXL</option>
+                                <option value="N/A">N/A</option>
                             </select>
                         </td>
                     </tr>
@@ -224,6 +227,7 @@
                                 <option value="XL">XL</option>
                                 <option value="XXL">XXL</option>
                                 <option value="XXXL">XXXL</option>
+                                <option value="N/A">N/A</option>
                             </select>
                         </td>
                     </tr>
@@ -254,6 +258,7 @@
                                 <option value="XL">XL</option>
                                 <option value="XXL">XXL</option>
                                 <option value="XXXL">XXXL</option>
+                                <option value="N/A">N/A</option>
                             </select>
                         </td>
                     </tr>
@@ -275,7 +280,7 @@
     <p>¡Síguenos en nuestras redes sociales!</p>
     <a href=https://www.facebook.com/share/16AWrM5C9H/?mibextid=wwXIfr target="_blank">Facebook</a>
     <a href=https://www.instagram.com/olimpo.sportsmx?igsh=dzcwZ21pZTFnMzM1 target="_blank">Instagram</a>
-    <p>Contáctanos al: wa.me/+52 55 74 43 92 43</p>
+    <p>Contáctanos al: +52 55 74 43 92 43</p>
 </div>
 
 <script>
